# openlogos

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  RELEASING.md  package-lock.json  当前文件：
.claude/: settings.json
.claude-plugin/: marketplace.json
cli/: .gitignore  README.md  eslint.config.js  miniidealab-openlogos-0.10.10.tgz  miniidealab-openlogos-0.11.0.tgz  miniidealab-openlogos-0.11.1.tgz  miniidealab-openlogos-0.11.2.tgz  miniidealab-openlogos-0.11.3.tgz  miniidealab-openlogos-0.7.3.tgz  miniidealab-openlogos-0.8.0.tgz  miniidealab-openlogos-0.8.1.tgz  miniidealab-openlogos-0.9.0.tgz  miniidealab-openlogos-0.9.1.tgz  miniidealab-openlogos-0.9.2.tgz  miniidealab-openlogos-0.9.27.tgz  package-lock.json  package.json  tsconfig.json  vitest.config.ts
docs/: flow-cmd-predicate-draft.md  opencode.md  orchestratable-flow-design.md  orchestratable-flow-guide.md  orchestratable-flow-verification.md
examples/: README.md
examples/flowtask/src-tauri/: Cargo.toml  tauri.conf.json
examples/flowtask/src-tauri/capabilities/: default.json
examples/flowtask/src-tauri/migrations/: 001_init.sql
examples/flowtask/src-tauri/src/: lib.rs  main.rs
examples/flowtask/src-tauri/tests/: orchestration.rs
logos/: logos-project.yaml
plugin-codex/: plugin.json  session-start.sh
plugin-opencode/: README.md  package.json
scripts/: build-plugin-skills.sh  run-smoke.js
spec/: agents-md.md  change-management.md  cli-json-output.md  codex-plugin.md  directory-convention.md  flow-spec.md  logos-project.md  release.md  (+9 more)
(+697 files in other folders)
