[package]
name = "flowtask"
version = "0.1.0"
description = "FlowTask — 本地任务管理桌面应用"
authors = ["you"]
edition = "2021"

[lib]
name = "flowtask_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcrypt = "0.15"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
